syntax = "proto3";

package datastoreqpu;
option go_package = "github.com/dimitriosvasilas/modqp/dataStoreQPU/dsqpupb";

import "qpuUtils.proto";

service DataStoreQPU {
  rpc SubscribeOps(SubRequest) returns (stream OpStream) {}
  rpc SubscribeStates(SubRequest) returns (stream StateStream) {}
  rpc GetSnapshot(SubRequest) returns (stream StateStream) {}
}

message SubRequest {
  int64 timestamp = 1;
}

message OpStream {
  string type = 1;
  qpuUtils.Object state = 2;
  qpuUtils.Operation operation = 3;
}

message StateStream {
  qpuUtils.Object object = 1;
}